--- a/HZSHOP/HZSHOP/Mine/Controller/HZRegisterViewController.xib
+++ b/HZSHOP/HZSHOP/Mine/Controller/HZRegisterViewController.xib
@@ -112,6 +112,9 @@
                                     <state key="normal" title="获取验证码">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </state>
+                                    <connections>
+                                        <action selector="getCode:" destination="-1" eventType="touchUpInside" id="dRD-46-JwJ"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
