--- a/HZSHOP/HZSHOP/Cart/View/HZAddressSelectTableViewCell.xib
+++ b/HZSHOP/HZSHOP/Cart/View/HZAddressSelectTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="HZAddressSelectTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="HZAddressSelectTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -57,7 +57,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="建安大道广发生物艾蓓家爱可登" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggD-ho-Br3">
                                 <rect key="frame" x="40" y="33" width="245" height="31.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.4823529411764706" green="0.4823529411764706" blue="0.4823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -126,6 +126,7 @@
                 <outlet property="addressInfoView" destination="Mhi-PI-nUK" id="LQz-Zu-oUF"/>
                 <outlet property="addressUserName" destination="4qX-3Y-glt" id="gMP-cS-sFr"/>
                 <outlet property="addressUserPhone" destination="55G-tD-1kC" id="1ei-gV-p8i"/>
+                <outlet property="arrowTipImage" destination="UjD-gu-zRN" id="9LD-IQ-Tgz"/>
             </connections>
             <point key="canvasLocation" x="52.799999999999997" y="96.251874062968525"/>
         </tableViewCell>
