--- a/HZSHOP/HZSHOP/Category/Controller/HZCategoryViewController.xib
+++ b/HZSHOP/HZSHOP/Category/Controller/HZCategoryViewController.xib
@@ -12,6 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HZCategoryViewController">
             <connections>
+                <outlet property="mainCategoryView" destination="CoU-OQ-HS6" id="e0x-e4-FQC"/>
+                <outlet property="subCategoryCollectionView" destination="tb4-6L-ZKU" id="y3T-qF-vhW"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,8 +21,67 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CoU-OQ-HS6">
+                    <rect key="frame" x="0.0" y="20" width="100" height="548"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EFc-Gm-TXz">
+                            <rect key="frame" x="0.0" y="0.0" width="100" height="999"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="100" id="2P3-fE-npz"/>
+                                <constraint firstAttribute="height" constant="999" id="xOZ-tZ-ebO"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="3Ht-PU-jdk"/>
+                        <constraint firstItem="EFc-Gm-TXz" firstAttribute="top" secondItem="CoU-OQ-HS6" secondAttribute="top" id="FbO-xW-Vgu"/>
+                        <constraint firstItem="EFc-Gm-TXz" firstAttribute="leading" secondItem="CoU-OQ-HS6" secondAttribute="leading" id="JwD-hg-D0Q"/>
+                        <constraint firstAttribute="trailing" secondItem="EFc-Gm-TXz" secondAttribute="trailing" id="NC5-Ft-EmX"/>
+                        <constraint firstAttribute="bottom" secondItem="EFc-Gm-TXz" secondAttribute="bottom" constant="-451" id="Npx-FJ-3XD"/>
+                    </constraints>
+                </scrollView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dkx-JP-mpc">
+                    <rect key="frame" x="100" y="0.0" width="1" height="568"/>
+                    <color key="backgroundColor" red="0.94117647059999998" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="1" id="Ah1-iz-pT7"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="tb4-6L-ZKU">
+                    <rect key="frame" x="110" y="20" width="200" height="548"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qzb-iu-jhw">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="aEc-Q9-cIu"/>
+                        <outlet property="delegate" destination="-1" id="Jhv-N3-fhz"/>
+                    </connections>
+                </collectionView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="tb4-6L-ZKU" firstAttribute="leading" secondItem="Dkx-JP-mpc" secondAttribute="trailing" constant="9" id="3oe-aq-zRJ"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="tb4-6L-ZKU" secondAttribute="bottom" id="8xF-7a-bvf"/>
+                <constraint firstItem="CoU-OQ-HS6" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="Chx-O9-uNI"/>
+                <constraint firstItem="Dkx-JP-mpc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="IBh-Ro-SKM"/>
+                <constraint firstItem="tb4-6L-ZKU" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="TuA-Gf-ADX"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="tb4-6L-ZKU" secondAttribute="trailing" constant="10" id="VP7-Zm-srg"/>
+                <constraint firstItem="CoU-OQ-HS6" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="bYk-hb-haF"/>
+                <constraint firstItem="CoU-OQ-HS6" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="fPZ-y1-PAi"/>
+                <constraint firstAttribute="bottom" secondItem="Dkx-JP-mpc" secondAttribute="bottom" id="jDr-Xd-6Wx"/>
+                <constraint firstItem="Dkx-JP-mpc" firstAttribute="leading" secondItem="CoU-OQ-HS6" secondAttribute="trailing" id="nKd-CF-S5V"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="138.75" y="130.98591549295776"/>
         </view>
     </objects>
 </document>
