--- a/HZSHOP/HZSHOP/Mine/View/HZAddressListTableViewCell.xib
+++ b/HZSHOP/HZSHOP/Mine/View/HZAddressListTableViewCell.xib
@@ -61,7 +61,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="编辑" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WyO-4f-cAz">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="删除" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WyO-4f-cAz">
                                 <rect key="frame" x="268" y="7" width="27" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="WyO-4f-cAz" secondAttribute="height" multiplier="27:16" id="JrJ-Jw-sIr"/>
@@ -141,14 +141,17 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J36-lD-C65">
                         <rect key="frame" x="10" y="5" width="300" height="30"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="测试啊" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HxI-wo-bHY">
-                                <rect key="frame" x="0.0" y="0.0" width="149" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="测试啊" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HxI-wo-bHY">
+                                <rect key="frame" x="0.0" y="0.0" width="73" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" priority="750" constant="73" id="xFm-bA-1lf"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13888888888" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wOc-Et-jct">
-                                <rect key="frame" x="151" y="0.0" width="149" height="30"/>
+                                <rect key="frame" x="83" y="0.0" width="217" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -156,15 +159,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="HxI-wo-bHY" firstAttribute="leading" secondItem="J36-lD-C65" secondAttribute="leading" id="54R-fm-etv"/>
-                            <constraint firstItem="wOc-Et-jct" firstAttribute="width" secondItem="HxI-wo-bHY" secondAttribute="width" id="67M-PD-250"/>
-                            <constraint firstItem="wOc-Et-jct" firstAttribute="leading" secondItem="HxI-wo-bHY" secondAttribute="trailing" constant="2" id="Fea-af-nxy"/>
-                            <constraint firstAttribute="trailing" secondItem="wOc-Et-jct" secondAttribute="trailing" id="FqC-dD-laZ"/>
-                            <constraint firstItem="wOc-Et-jct" firstAttribute="top" secondItem="J36-lD-C65" secondAttribute="top" id="Gqj-05-M3C"/>
+                            <constraint firstAttribute="bottom" secondItem="HxI-wo-bHY" secondAttribute="bottom" id="4Ia-F4-iqh"/>
+                            <constraint firstAttribute="trailing" secondItem="wOc-Et-jct" secondAttribute="trailing" id="AWL-Ug-p3W"/>
+                            <constraint firstItem="HxI-wo-bHY" firstAttribute="leading" secondItem="J36-lD-C65" secondAttribute="leading" id="O7O-YY-GLj"/>
+                            <constraint firstItem="wOc-Et-jct" firstAttribute="leading" secondItem="HxI-wo-bHY" secondAttribute="trailing" constant="10" id="OoC-9U-PJo"/>
                             <constraint firstAttribute="height" constant="30" id="cM4-Jj-iGD"/>
-                            <constraint firstAttribute="bottom" secondItem="HxI-wo-bHY" secondAttribute="bottom" id="gbY-2J-GKH"/>
-                            <constraint firstAttribute="bottom" secondItem="wOc-Et-jct" secondAttribute="bottom" id="ijJ-UG-5Lq"/>
-                            <constraint firstItem="HxI-wo-bHY" firstAttribute="top" secondItem="J36-lD-C65" secondAttribute="top" id="uRT-uY-1ZN"/>
+                            <constraint firstItem="wOc-Et-jct" firstAttribute="top" secondItem="J36-lD-C65" secondAttribute="top" id="jT5-aX-9XK"/>
+                            <constraint firstItem="HxI-wo-bHY" firstAttribute="top" secondItem="J36-lD-C65" secondAttribute="top" id="jYy-wo-pL9"/>
+                            <constraint firstAttribute="bottom" secondItem="wOc-Et-jct" secondAttribute="bottom" id="yFX-Ns-1qM"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -182,7 +184,13 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
-            <point key="canvasLocation" x="224" y="76"/>
+            <connections>
+                <outlet property="addressInfoLabel" destination="t2p-VM-66s" id="MpJ-q8-WcA"/>
+                <outlet property="defaultButton" destination="hxq-ch-GRh" id="bJB-Ra-xIK"/>
+                <outlet property="nameLabel" destination="HxI-wo-bHY" id="obP-7Y-I1m"/>
+                <outlet property="phoneLabel" destination="wOc-Et-jct" id="LT7-Cx-8G2"/>
+            </connections>
+            <point key="canvasLocation" x="224" y="75.112443778110944"/>
         </tableViewCell>
     </objects>
     <resources>
