--- a/HZSHOP/HZSHOP/Mine/View/HZAddressListTableViewCell.xib
+++ b/HZSHOP/HZSHOP/Mine/View/HZAddressListTableViewCell.xib
@@ -22,13 +22,16 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Sd-j8-rKc">
                         <rect key="frame" x="10" y="94.5" width="300" height="30"/>
                         <subviews>
-                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hxq-ch-GRh">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hxq-ch-GRh">
                                 <rect key="frame" x="0.0" y="6" width="18" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="hxq-ch-GRh" secondAttribute="height" multiplier="1:1" id="KrI-pP-2Qa"/>
                                 </constraints>
                                 <state key="normal" backgroundImage="radio"/>
                                 <state key="selected" backgroundImage="radioed.png"/>
+                                <connections>
+                                    <action selector="isDefault:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="D94-gX-rVU"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="默认地址" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZNr-xR-y2j">
                                 <rect key="frame" x="26" y="5" width="68" height="21"/>
