--- a/HZSHOP/HZSHOP/Home/Controller/HZGoodsDetailViewController.xib
+++ b/HZSHOP/HZSHOP/Home/Controller/HZGoodsDetailViewController.xib
@@ -14,6 +14,8 @@
             <connections>
                 <outlet property="bgScrollView" destination="dpc-4p-W1Q" id="4uc-UK-7Oc"/>
                 <outlet property="bgView" destination="kZo-rC-Izb" id="WMq-gT-ysm"/>
+                <outlet property="buyOrShopCartView" destination="BXw-RL-nYW" id="PRw-fm-dM6"/>
+                <outlet property="commitButton" destination="dRE-MJ-CqZ" id="tVn-Vv-gRB"/>
                 <outlet property="detailView" destination="tto-Q7-EUV" id="oxw-pF-wDE"/>
                 <outlet property="expressMoney" destination="n5P-vE-CRd" id="mLS-sJ-Upe"/>
                 <outlet property="goodsInfoView" destination="p6C-7J-cIw" id="lac-TD-L2s"/>
@@ -179,6 +181,9 @@
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZOH-zY-6sL">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="35"/>
+                                            <connections>
+                                                <action selector="selectParameter:" destination="-1" eventType="touchUpInside" id="mts-25-LnE"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -308,8 +313,11 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jzN-29-JJw">
+                                <button opaque="NO" tag="300" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jzN-29-JJw">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="44"/>
+                                    <connections>
+                                        <action selector="jumbShopCart:" destination="-1" eventType="touchUpInside" id="Xx4-VE-lsg"/>
+                                    </connections>
                                 </button>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="星星x" translatesAutoresizingMaskIntoConstraints="NO" id="lHH-32-p8y">
                                     <rect key="frame" x="16" y="3.5" width="18" height="18"/>
@@ -376,8 +384,11 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VqN-2r-AG0">
+                                <button opaque="NO" tag="301" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VqN-2r-AG0">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="44"/>
+                                    <connections>
+                                        <action selector="jumbShopCart:" destination="-1" eventType="touchUpInside" id="aFq-zH-C0P"/>
+                                    </connections>
                                 </button>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="busi-icon1" translatesAutoresizingMaskIntoConstraints="NO" id="ORa-R6-FVd">
                                     <rect key="frame" x="16" y="3.5" width="18" height="18"/>
@@ -444,8 +455,11 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Tx-uX-Xgl">
+                                <button opaque="NO" tag="302" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Tx-uX-Xgl">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="44"/>
+                                    <connections>
+                                        <action selector="jumbShopCart:" destination="-1" eventType="touchUpInside" id="Fnj-7m-0A0"/>
+                                    </connections>
                                 </button>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MallCartImage" translatesAutoresizingMaskIntoConstraints="NO" id="oFl-UW-ddi">
                                     <rect key="frame" x="16" y="3.5" width="18" height="18"/>
@@ -489,6 +503,9 @@
                             <state key="normal" title="加入购物车">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="addShopCart:" destination="-1" eventType="touchUpInside" id="Sos-MR-I4h"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qon-js-12s">
                             <rect key="frame" x="235" y="0.0" width="85" height="44"/>
@@ -663,13 +680,52 @@
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
-                        <action selector="buyNow:" destination="-1" eventType="touchUpInside" id="D4v-j2-Bne"/>
                         <action selector="commitOrder:" destination="-1" eventType="touchUpInside" id="1Tv-Sh-2WS"/>
                     </connections>
                 </button>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BXw-RL-nYW">
+                    <rect key="frame" x="0.0" y="186" width="320" height="40"/>
+                    <subviews>
+                        <button opaque="NO" tag="201" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="agz-RY-g5q">
+                            <rect key="frame" x="160" y="0.0" width="160" height="40"/>
+                            <color key="backgroundColor" red="0.98823529409999999" green="0.3411764706" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <state key="normal" title="立即购买">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="buyNowOrShopCart:" destination="-1" eventType="touchUpInside" id="p1d-dI-Swe"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" tag="200" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LEM-sU-7Vl">
+                            <rect key="frame" x="0.0" y="0.0" width="160" height="40"/>
+                            <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <state key="normal" title="加入购物车">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="buyNowOrShopCart:" destination="-1" eventType="touchUpInside" id="z3V-sm-qTz"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="LEM-sU-7Vl" secondAttribute="bottom" id="4Hv-ng-WtP"/>
+                        <constraint firstItem="LEM-sU-7Vl" firstAttribute="top" secondItem="BXw-RL-nYW" secondAttribute="top" id="AAx-Il-KkG"/>
+                        <constraint firstAttribute="width" secondItem="BXw-RL-nYW" secondAttribute="height" multiplier="8:1" id="GeI-bE-aH8"/>
+                        <constraint firstItem="LEM-sU-7Vl" firstAttribute="leading" secondItem="BXw-RL-nYW" secondAttribute="leading" id="O4U-Gf-gnU"/>
+                        <constraint firstAttribute="trailing" secondItem="agz-RY-g5q" secondAttribute="trailing" id="edE-W1-OkN"/>
+                        <constraint firstAttribute="bottom" secondItem="agz-RY-g5q" secondAttribute="bottom" id="guZ-Mn-wey"/>
+                        <constraint firstItem="agz-RY-g5q" firstAttribute="leading" secondItem="LEM-sU-7Vl" secondAttribute="trailing" id="iVY-zl-T0K"/>
+                        <constraint firstItem="agz-RY-g5q" firstAttribute="width" secondItem="LEM-sU-7Vl" secondAttribute="width" id="jsR-dW-Aqn"/>
+                        <constraint firstItem="agz-RY-g5q" firstAttribute="top" secondItem="BXw-RL-nYW" secondAttribute="top" id="pKa-ga-U5s"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="BXw-RL-nYW" secondAttribute="trailing" id="0Is-F8-Ugz"/>
                 <constraint firstItem="5kl-2l-2s1" firstAttribute="leading" secondItem="uWW-Cz-XLf" secondAttribute="leading" id="5uV-aF-TpW"/>
                 <constraint firstItem="oE4-cZ-zh8" firstAttribute="top" secondItem="uWW-Cz-XLf" secondAttribute="top" constant="-30" id="6de-aj-jEz"/>
                 <constraint firstItem="oAt-zu-jvA" firstAttribute="top" secondItem="5kl-2l-2s1" secondAttribute="bottom" constant="25" id="7Vd-oo-Uz4"/>
@@ -680,15 +736,17 @@
                 <constraint firstAttribute="trailing" secondItem="dRE-MJ-CqZ" secondAttribute="trailing" id="Qve-AS-bW7"/>
                 <constraint firstAttribute="trailing" secondItem="5kl-2l-2s1" secondAttribute="trailing" id="dX4-dE-hOW"/>
                 <constraint firstAttribute="bottom" secondItem="dRE-MJ-CqZ" secondAttribute="bottom" id="e6V-dq-sBZ"/>
+                <constraint firstAttribute="bottom" secondItem="BXw-RL-nYW" secondAttribute="bottom" id="fw4-1J-m8Q"/>
                 <constraint firstItem="dRE-MJ-CqZ" firstAttribute="leading" secondItem="uWW-Cz-XLf" secondAttribute="leading" id="kj5-QM-0HP"/>
                 <constraint firstAttribute="trailing" secondItem="veu-cC-Xci" secondAttribute="trailing" constant="10" id="l1c-H2-Jg4"/>
+                <constraint firstItem="BXw-RL-nYW" firstAttribute="leading" secondItem="uWW-Cz-XLf" secondAttribute="leading" id="mk8-EN-ogV"/>
                 <constraint firstItem="oAt-zu-jvA" firstAttribute="leading" secondItem="uWW-Cz-XLf" secondAttribute="leading" id="ntj-dh-Kae"/>
                 <constraint firstItem="oE4-cZ-zh8" firstAttribute="leading" secondItem="uWW-Cz-XLf" secondAttribute="leading" constant="25" id="oIk-xV-B0j"/>
                 <constraint firstItem="Ff5-vc-pqK" firstAttribute="leading" secondItem="oE4-cZ-zh8" secondAttribute="trailing" constant="20" id="rsO-Ua-zH0"/>
                 <constraint firstItem="veu-cC-Xci" firstAttribute="leading" secondItem="Ff5-vc-pqK" secondAttribute="trailing" constant="20" id="u0z-mM-1p2"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="138.75" y="593.66197183098598"/>
+            <point key="canvasLocation" x="-189.375" y="617.95774647887322"/>
         </view>
     </objects>
     <resources>
