--- a/HZSHOP/HZSHOP/Home/Controller/HZGoodsDetailViewController.xib
+++ b/HZSHOP/HZSHOP/Home/Controller/HZGoodsDetailViewController.xib
@@ -27,6 +27,7 @@
                 <outlet property="headerView" destination="LlJ-vE-Hy9" id="R3Z-ZV-kWC"/>
                 <outlet property="jumpShopButton" destination="cGY-XJ-tSV" id="dIp-of-wWe"/>
                 <outlet property="numTextField" destination="wdx-N4-zxX" id="RSE-37-FTI"/>
+                <outlet property="parameterTableView" destination="lLv-Ts-Zjr" id="9ZF-is-VAA"/>
                 <outlet property="selecetNumView" destination="l2s-U6-A8N" id="Lxp-GN-pdt"/>
                 <outlet property="selecteBgView" destination="eIl-cs-u1T" id="2o0-OM-RcH"/>
                 <outlet property="shopView" destination="jlb-gx-e9L" id="KkL-rT-4cG"/>
@@ -565,7 +566,7 @@
             <point key="canvasLocation" x="138.75" y="138.38028169014083"/>
         </view>
         <view contentMode="scaleToFill" id="uWW-Cz-XLf">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="226"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appIcon" translatesAutoresizingMaskIntoConstraints="NO" id="oE4-cZ-zh8">
@@ -670,7 +671,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dRE-MJ-CqZ">
-                    <rect key="frame" x="0.0" y="186" width="320" height="40"/>
+                    <rect key="frame" x="0.0" y="260" width="320" height="40"/>
                     <color key="backgroundColor" red="0.98823529409999999" green="0.3411764706" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="dRE-MJ-CqZ" secondAttribute="height" multiplier="8:1" id="xhE-Uq-6SV"/>
@@ -684,7 +685,7 @@
                     </connections>
                 </button>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BXw-RL-nYW">
-                    <rect key="frame" x="0.0" y="186" width="320" height="40"/>
+                    <rect key="frame" x="0.0" y="260" width="320" height="40"/>
                     <subviews>
                         <button opaque="NO" tag="201" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="agz-RY-g5q">
                             <rect key="frame" x="160" y="0.0" width="160" height="40"/>
@@ -722,20 +723,32 @@
                         <constraint firstItem="agz-RY-g5q" firstAttribute="top" secondItem="BXw-RL-nYW" secondAttribute="top" id="pKa-ga-U5s"/>
                     </constraints>
                 </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="lLv-Ts-Zjr">
+                    <rect key="frame" x="0.0" y="116" width="320" height="139"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="678-pS-gt9"/>
+                        <outlet property="delegate" destination="-1" id="EgD-c8-elJ"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="BXw-RL-nYW" secondAttribute="trailing" id="0Is-F8-Ugz"/>
+                <constraint firstItem="lLv-Ts-Zjr" firstAttribute="top" secondItem="oAt-zu-jvA" secondAttribute="bottom" constant="5" id="2eP-zr-QJN"/>
                 <constraint firstItem="5kl-2l-2s1" firstAttribute="leading" secondItem="uWW-Cz-XLf" secondAttribute="leading" id="5uV-aF-TpW"/>
                 <constraint firstItem="oE4-cZ-zh8" firstAttribute="top" secondItem="uWW-Cz-XLf" secondAttribute="top" constant="-30" id="6de-aj-jEz"/>
                 <constraint firstItem="oAt-zu-jvA" firstAttribute="top" secondItem="5kl-2l-2s1" secondAttribute="bottom" constant="25" id="7Vd-oo-Uz4"/>
                 <constraint firstItem="5kl-2l-2s1" firstAttribute="top" secondItem="oE4-cZ-zh8" secondAttribute="bottom" constant="10" id="Gkq-bQ-AUE"/>
+                <constraint firstItem="dRE-MJ-CqZ" firstAttribute="top" secondItem="lLv-Ts-Zjr" secondAttribute="bottom" constant="5" id="JgV-u1-exH"/>
                 <constraint firstItem="Ff5-vc-pqK" firstAttribute="top" secondItem="uWW-Cz-XLf" secondAttribute="top" constant="8" id="Jpz-Qa-2wf"/>
                 <constraint firstItem="veu-cC-Xci" firstAttribute="top" secondItem="uWW-Cz-XLf" secondAttribute="top" constant="8" id="OGY-2q-2Oa"/>
                 <constraint firstAttribute="trailing" secondItem="oAt-zu-jvA" secondAttribute="trailing" id="ORj-5m-3Ao"/>
                 <constraint firstAttribute="trailing" secondItem="dRE-MJ-CqZ" secondAttribute="trailing" id="Qve-AS-bW7"/>
                 <constraint firstAttribute="trailing" secondItem="5kl-2l-2s1" secondAttribute="trailing" id="dX4-dE-hOW"/>
                 <constraint firstAttribute="bottom" secondItem="dRE-MJ-CqZ" secondAttribute="bottom" id="e6V-dq-sBZ"/>
+                <constraint firstAttribute="trailing" secondItem="lLv-Ts-Zjr" secondAttribute="trailing" id="e8a-pC-NxZ"/>
+                <constraint firstItem="lLv-Ts-Zjr" firstAttribute="leading" secondItem="uWW-Cz-XLf" secondAttribute="leading" id="fNs-zm-3lo"/>
                 <constraint firstAttribute="bottom" secondItem="BXw-RL-nYW" secondAttribute="bottom" id="fw4-1J-m8Q"/>
                 <constraint firstItem="dRE-MJ-CqZ" firstAttribute="leading" secondItem="uWW-Cz-XLf" secondAttribute="leading" id="kj5-QM-0HP"/>
                 <constraint firstAttribute="trailing" secondItem="veu-cC-Xci" secondAttribute="trailing" constant="10" id="l1c-H2-Jg4"/>
